# papr-voice-demo

./: .env.example  .gitignore  MEMORY_HANDLING_VERIFICATION.md  QUICK_START.md  README.md  RETEST_CHECKLIST.md  USER_CONTEXT_SETUP.md  app.py  app_demo.py  app_real 2.py  app_real.py  app_voice_orb.py  chromadb_tier1_memories.txt  chromadb_top_20_memories.md  papr_sync_tier0_20251122_082710.json  papr_sync_tier0_20251122_093012.json  papr_sync_tier1_20251122_082710.json  papr_sync_tier1_20251122_093012.json  pipecat-test.html  pyproject.toml  requirements.txt  run.sh  setup.sh  voice.html  voice_server.py
archive/: app_simple.py  chromadb_top_20_memories.txt  realtime_voice.py  voice_component.py  voice_server 2.py  voice_server_debug.py
coreml/fp16/: Manifest.json
coreml/fp16/Data/com.apple.CoreML/: model.mlmodel
docs/: COMPLETE_FIX_SUMMARY.md  DEMO_GUIDE.md  EMPTY_CONTENT_FIX.md  PIPECAT_INTEGRATION.md  PROGRESS.md  RUN_CONSTELLATION.md  SDK_FIX_TIER1.md  SYNC_RESPONSE_LOGGING.md  TESTING.md  TIER1_CONTENT_FIX.md  TIER1_FIX.md  agent.md
scripts/: check_coreml_compute.py  check_papr_memory_count.py  cleanup_chromadb.sh  cleanup_memory.sh  dev.sh  fix_and_test_tier1.sh  fix_tier1_collection.py  inspect_chromadb.py  inspect_chromadb_detailed.py  inspect_embeddings.py  inspect_tier1_content.py  inspect_tier1_memories.py  inspect_top_memories.py  resource_check.py  run-pipecat.sh  run.sh  run_orb.sh  setup-poetry.sh  setup.sh  sync_memories.py  test.sh  test_empty_content_fix.sh  test_sync_response.py  warmup_model.py
src/python/: pipecat_server.py  requirements.txt  tool_schemas.py  voice_server.py
src/server/: jest.config.js  jest.setup.ts  package.json  tsconfig.json
src/server/src/: index.ts
src/server/src/services/: PaprMemoryService.test.ts  PaprMemoryService.ts
src/server/src/types/: papr-memory.ts
tests/: test_coreml.py  test_coreml_detailed.py  test_import.py  test_query_embedding.py  test_setup.py  test_setup_complete.py  test_tool_schemas.py  test_voice_server.py
