[tool.poetry]
name = "papr-voice-demo"
version = "1.0.0"
description = "PAPR Voice Demo - Real-time voice with on-device CoreML memory retrieval"
authors = ["PAPR Team"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
# Web framework
flask = "^3.0.0"
flask-cors = "^4.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"

# HTTP client
httpx = "^0.27.0"

# Validation
pydantic = "^2.0.0"

# Environment
python-dotenv = "^1.0.0"

# System utilities
psutil = "^5.9.0"

# Pipecat voice pipeline
pipecat-ai = {extras = ["silero", "openai", "whisper"], version = "^0.0.47"}

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.0"

# Code quality
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

# Type stubs
types-psutil = "^5.9.0"

[tool.poetry.scripts]
voice-server = "voice_server:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src/python --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
